--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,6 @@
 
 /* app.css */
 html { scroll-behavior: smooth; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
-body { background-color: #070417; margin: 0;padding: 0; }
-div{
-    
-    /* border: 2px solid black; */
-     font-family: 'Outfit', sans-serif;
-}
+body { background-color: #070417; margin: 0;padding: 0; font-family: 'Outfit', sans-serif; }
 
 
